# slugify-postgres

./: Cargo.toml  README.md  pg_slugify.control  slugify.control
docker/: Dockerfile
src/: lib.rs
